possible code fixes

--- a/src/main/webapp/templates/footer.hbs
+++ b/src/main/webapp/templates/footer.hbs
@@ -1,3 +1,6 @@
 <span id="todo-count">
   <strong>{{ activeCount }}</strong> {{ activeCountLabel }}
 </span>
+<!--<span id="todo-completed">-->
+  <!--<strong>{{ completedCount }}</strong> {{ completedCountLabel}}-->
+<!--</span>-->
